--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-streamlit
+# streamlit
+# opencv-python-headless
+# ultralytics
+# numpy
+# pandas
+# opencv-python-headless
+streamlit==1.20.0
+ultralytics==8.0.20
 opencv-python-headless
-ultralytics
 numpy
-pandas
+pillow
